# data-democratization-toolkit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/: self_service_analytics.py
src/: __init__.py
src/connectors/: fabric_connector.py  sql_connector.py
src/insights/: auto_insight_generator.py
src/query/: nl_to_sql.py
src/visualization/: chart_recommender.py
tests/: test_nl_to_sql.py
