[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-democratization-toolkit"
version = "1.0.0"
description = "Self-service analytics for business users"
requires-python = ">=3.9"
authors = [{name = "Sainath Pattipati"}]
dependencies = ["langchain>=0.1.0", "openai>=0.27.0", "sqlalchemy>=2.0.0", "plotly>=5.0.0", "pandas>=1.3.0", "pyodbc>=4.0.0"]
